# baxter-hanoi

ros_ws/src/moveit_robots/baxter/baxter_moveit_config/: BaxterArmClient_v10.py  BaxterArm_v08.py  CMakeLists.txt  Utils.py  calibration.py  ik_solver.py  package.xml  petri_net_class_v10.py  petri_net_pocetno_stanje_v01.py
ros_ws/src/moveit_robots/baxter/baxter_moveit_config/action/: baxter.action  init.action
ros_ws/src/moveit_robots/baxter/baxter_moveit_config/config/: kinematics.yaml
ros_ws/src/moveit_robots/baxter/baxter_moveit_config/launch/: .demo_baxter.launch.swp  moveit.rviz
ros_ws/src/transformation/: CMakeLists.txt  package.xml
ros_ws/src/transformation/launch/: start_tf_publisher.launch  transformation_publisher.launch
ros_ws/src/transformation/nodes/: inka_baxter_optitrack_transformation.py
